# colbertdb

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  compose.yml  entrypoint.sh  initialize_data.sh  pyproject.toml
.github/workflows/: test.yml
colbertdb/core/models/: colbertplaid.py  collection.py  index.py  passage.py  store.py
colbertdb/core/models/pydantic_models/: __init__.py
colbertdb/core/utils/: documentutils.py  torch_kmeans.py
colbertdb/server/: main.py  models.py
colbertdb/server/api/: deps.py  main.py
colbertdb/server/api/routes/: client.py  collections.py  management.py
colbertdb/server/apps/client/: README.md  __init__.py  main.py  models.py  routes.py
colbertdb/server/apps/collections/: README.md  __init__.py  models.py  routes.py
colbertdb/server/core/: config.py
colbertdb/server/routers/: client.py  collections.py  health.py
colbertdb/server/services/: api_key_manager.py  auth.py  file_ops.py
colbertdb/server/stores/: api_keys.py
evaluations/: ms_marco.ipynb  pubmed.ipynb
examples/: simple.ipynb  simpleRAG.ipynb
scripts/: entrypoint.sh  warm.py
tests/: test_client_routes.py  test_collections_routes.py
tests/server/api/: test_deps.py
tests/server/api/routes/: test_client.py  test_collections.py  test_management.py
tests/server/apps/client/: test_.py
tests/server/apps/collections/: test_.py
tests/server/services/: test_api_key_manager.py  test_auth.py
